--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-A GIS based tool for automatic bankfull detection from airborne high resolution dem
+A semi-automatic GIS tool for fluvial geomophological analysis of river cross sections
 
 Corrado Cencetti1, Pierluigi De Rosa1, Andrea Fredduzzi1
 
